<?xml version="1.0"?>
<package format="2">
  <name>march_hardware_builder</name>
  <version>0.0.0</version>
  <description>Generate hardware configuration from yaml files.</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>march_hardware</depend>

  <build_depend>roslint</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>code_coverage</test_depend>
</package>
