<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_hardware_builder</name>
  <version>0.0.0</version>
  <description>Generate hardware configuration from yaml files.</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>march_hardware</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>urdf</depend>
  <depend>yaml-cpp</depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rosunit</test_depend>
</package>
