<package format="2">
  <name>march_hardware_state_controller</name>
  <version>0.0.0</version>
  <description>Controller to publish the hardware state of the exoskeleton</description>
  <maintainer email="isha@projectmarch.nl">Isha Dijcks</maintainer>
  <author email="isha@projectmarch.nl">Isha Dijcks</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>code_coverage</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>march_hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend> 

  <export>
    <controller_interface plugin="${prefix}/march_hardware_state_plugin.xml"/>
  </export>
</package>
