<?xml version="1.0"?>
<package format="2">
  <name>march_imu_manager</name>
  <version>0.0.0</version>
  <description>The IMU manager that publishes IMU data</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rosunit</test_depend>
</package>
