<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_imu_manager</name>
  <version>0.0.0</version>
  <description>The IMU manager that publishes IMU data</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rosunit</test_depend>
</package>
