<?xml version="1.0"?>
<package format="2">
  <name>march_joint_inertia_controller</name>
  <version>0.0.0</version>
  <description>The march_joint_inertia_controller package</description>

  <maintainer email="cilia@todo.todo">cilia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />

  </export>
</package>
