<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_joint_inertia_controller</name>
  <version>0.0.0</version>
  <description>ROS controller which can be customized to operate in different circumstances.  </description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
