<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_pdb_state_controller</name>
  <version>0.0.0</version>
  <description>Controller to publish state of march PDB</description>
  <maintainer email="software@projectmarch.nl">Project MARCH</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>march_hardware</depend>
  <depend>march_hardware_interface</depend>
  <depend>march_shared_resources</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend> 

  <export>
    <controller_interface plugin="${prefix}/march_pdb_state_plugin.xml"/>
  </export>
</package>
